<!--
    Copyright 2019 Google Inc. All Rights Reserved.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Custom Tabs Demos</string>

    <string name="action_create_notification">Create Notification</string>
    <string name="title_activity_notification_parent">Notification Demo</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="notification_title">Open Web Content</string>
    <string name="notification_text">Open your web content on Chrome Custom Tabs</string>
    <string name="notification_sample_url">https://developer.chrome.com/multidevice/android/customtabs</string>
    <string name="label_url">URL:</string>
    <string name="default_test_url">http://developer.android.com</string>
    <string name="back_to_app">Back to your application!</string>
    <string name="label_start_custom_tab">Open Custom Tab</string>
    <string name="label_add_menus">Add Menus</string>
    <string name="label_add_action_button">Add Action Button</string>
    <string name="label_action">Perform Action</string>
    <string name="label_fixed_height">Fixed height</string>
    <string name="label_interact_background_app">Interactable background app</string>
    <string name="label_corner_radius">Corner radius</string>

    <string name="label_toobar_color">Toolbar Color:</string>
    <string name="default_toolbar_color">#980e03</string>
    <string name="menu_item_title">Sample Menu Item</string>
    <string name="label_may_launch_url">May Launch URL</string>
    <string name="dp_template">%ddp</string>

    <!-- Demo Activities Titles -->
    <string name="title_activity_simple_chrome_tab">Simple Chrome Custom Tab</string>
    <string name="title_activity_partial_custom_tab">Partial Custom Tab</string>
    <string name="title_activity_customized_chrome_tab">Customized UI Chrome Custom Tab</string>
    <string name="title_activity_service_connection">Service Connection Activity</string>
    <string name="title_activity_browser_actions">Browser Actions Demo</string>

    <!-- Demo Activities Descriptions -->
    <string name="description_activity_simple_chrome_tab">
        It is the minimal possible implementation of Chrome Custom Tabs. Doesn’t have any
        customizations, warm-up or pre-fetch. Allows the user to choose which URL to open.
    </string>

    <string name="description_activity_partial_custom_tab">
        It is a Chrome Custom Tab that works like a bottom sheet. Users can resize the tab,
        interact with the parent activity. Also, additional UI customization is possible.
    </string>

    <string name="description_activity_customized_chrome_tab">
        Allows the user to choose which URL to open, the Toolbar color, add an Action button and
        custom menus to the Toolbar.
    </string>

    <string name="description_activity_service_connection">
        Connects to the Chrome Custom Tabs Service and warms up Chrome. Allows user to call may
        launch url before opening the Url.
    </string>

    <string name="description_activity_notification">
        Creates a Notification that opens a Chrome Custom Tab when clicked, and returns to the host
        app when the user hits Back or Up
    </string>

    <string name="description_activity_browser_actions">
        Demonstrates the usage of Browser Actions with a Custom Tab. A simple click on a button
        opens a link in the custom tab. A long-click will trigger browser actions and give the
        user further options on how to open the tab.
    </string>

    <string name="label_custom_back_button">Custom back button</string>
    <string name="label_show_title">Show title</string>
    <string name="label_auto_hide_appbar">Auto-hide AppBar</string>
    <string name="label_add_default_share">Add default share</string>
    <string name="label_toobar_secondary_color">Secondary Toolbar Color</string>
    <string name="label_add_toolbar_item">Add toolbar item</string>
    <string name="label_open_link">Open Link</string>
    <string name="label_open_alternate_link">Open Alternate Link</string>
    <string name="action_button_toast_text">Action Button Clicked with URL: %s</string>
    <string name="menu_item_toast_text">Menu Item Clicked with URL: %s</string>
    <string name="toolbar_toast_text">Toolbar Clicked with URL: %s</string>
    <string name="unknown_toast_text">Unknown Action Clicked with URL: %s</string>
    <string name="browser_actions_desc">Tap the button to open custom tab. Long press the button to see the actions menu.</string>
    <string name="title_activity_engagement_signals">Engagement Signals Demo</string>
    <string name="description_activity_engagement_signals">Demonstrates which user engagement events are fired by a Custom Tab.</string>
    <string name="open">Open</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_event_vertical_scroll"></string>
    <string name="label_event_greatest_percentage"></string>
    <string name="label_event_session_ended"></string>
    <string name="label_event_navigation"></string>
</resources>
