<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".CustomUIActivity">

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_height="wrap_content"
            android:text="@string/label_url" />

        <EditText
            android:id="@+id/url"
            android:text="@string/default_test_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/view_vertical_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/label_fixed_height"/>

            <CheckBox
                android:id="@+id/fixed_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/view_vertical_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/label_interact_background_app"/>

            <CheckBox
                android:id="@+id/background_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/view_vertical_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:maxWidth="160sp"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/label_corner_radius"/>

            <TextView
                android:id="@+id/corner_radius_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:minWidth="40sp"
                android:labelFor="@+id/pcct_initial_height_slider"/>

            <SeekBar
                android:id="@+id/corner_radius_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/start_custom_tab"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_start_custom_tab" />

    </LinearLayout>
</ScrollView>
